testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics7.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,11): error TS8006: 'namespace' declarations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    namespace M { }
              ~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.